--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,12 @@ p {
 }
 
 .btn:focus {
-  background: #e44c65;
+  background: #7e4e6e;
   border-color: transparent;
 }
 
 .btn-success {
-  background: #e44c65;
+  background: #7e4e6e;
   font-weight: 300;
   letter-spacing: 2px;
   padding: 14px 32px;
@@ -79,14 +79,14 @@ p {
 }
 
 a {
-  color: #e44c65;
+  color: #7e4e6e;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
   text-decoration: none !important;
 }
 a:hover, a:active, a:focus {
-  color: #e44c65;
+  color: #7e4e6e;
   outline: none;
 }
 
@@ -111,6 +111,10 @@ a:hover, a:active, a:focus {
 }
 
 #docs .section-title {
+  padding-top: 22px;
+}
+
+#contactos .section-title {
   padding-top: 22px;
 }
 
@@ -160,7 +164,7 @@ a:hover, a:active, a:focus {
 .sk-spinner-pulse {
   width: 60px;
   height: 60px;
-  background-color: #e44c65;
+  background-color: #7e4e6e;
   border-radius: 100%;
   margin: 40px auto;
   -webkit-animation: sk-pulseScaleOut 1s infinite ease-in-out;
@@ -499,12 +503,12 @@ a:hover, a:active, a:focus {
 /*---------------------------------------
     Videos section              
 -----------------------------------------*/
-#videos, #preguntas, footer {
+#videos, #preguntas, #contactos, footer {
   background: #304352;
   color: #ffffff;
 }
 
-#preguntas {
+#preguntas, #contactos {
   background: #f0f0f0;
   color: #304352;
 }
@@ -577,7 +581,7 @@ footer {
 
 .social-icon li a:hover {
   background: #ffffff;
-  color: #e44c65;
+  color: #7e4e6e;
 }
 
 /*---------------------------------------
@@ -602,7 +606,7 @@ footer {
 }
 
 .go-top:hover {
-  background: #e44c65;
+  background: #7e4e6e;
   color: #ffffff;
 }
 
@@ -673,7 +677,7 @@ footer {
 }
 
 .blog-thumb small {
-  color: #ce3232;
+  color: #7e4e6e;
   font-weight: 500;
   display: block;
 }
@@ -872,11 +876,11 @@ footer .under-footer p {
 }
 
 footer .under-footer a {
-  color: #cff;
+  color: #aaa;
 }
 
 footer .under-footer a:hover {
-  color: #c66;
+  color: #7e4e6e;
 }
 
 .w-100 {
@@ -886,4 +890,303 @@ footer .under-footer a:hover {
 
 .pa-0 {
   padding-left: 0px !important;
+}
+
+.blockquote-custom-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: -20px;
+  right: 50px;
+  z-index: 999;
+  background-color: #7e4e6e;
+}
+
+/* ------------- */
+/* Card contacto */
+/* ------------- */
+.light {
+	background: #f3f5f7;
+}
+
+a, a:hover {
+	text-decoration: none;
+	transition: color 0.3s ease-in-out;
+}
+
+.postcard {
+  flex-wrap: wrap;
+  display: flex;
+  border-radius: 5px;
+  margin: 0 0 2rem 0;
+  overflow: hidden;
+  position: relative;
+  color: #ffffff;
+}
+
+.postcard.light {
+  background-color: #FFF;
+}
+
+.postcard a {
+  color: inherit;
+}
+.postcard h1, .postcard .h1 {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+.postcard .small {
+  font-size: 80%;
+}
+.postcard .postcard__title {
+  font-size: 1.75rem;
+}
+.postcard .postcard__img {
+  max-height: 180px;
+  width: 100%;
+  object-fit: cover;
+  position: relative;
+}
+.postcard .postcard__img_link {
+  display: contents;
+}
+.postcard .postcard__bar {
+  width: 50px;
+  height: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+  background-color: #424242;
+  transition: width 0.2s ease;
+}
+.postcard .postcard__text {
+  padding: 1.5rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+.postcard .postcard__preview-txt {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: justify;
+  height: 100%;
+}
+.postcard .postcard__tagbox {
+  display: flex;
+  flex-flow: row wrap;
+  font-size: 14px;
+  margin: 20px 0 0 0;
+  padding: 0;
+  justify-content: center;
+}
+.postcard .postcard__tagbox .tag__item {
+  display: inline-block;
+  background: rgba(83, 83, 83, 0.4);
+  border-radius: 3px;
+  padding: 2.5px 10px;
+  margin: 0 5px 5px 0;
+  cursor: default;
+  user-select: none;
+  transition: background-color 0.3s;
+}
+.postcard .postcard__tagbox .tag__item:hover {
+  background: rgba(83, 83, 83, 0.8);
+}
+.postcard:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(-70deg, #424242, transparent 50%);
+  opacity: 1;
+  border-radius: 10px;
+}
+.postcard:hover .postcard__bar {
+  width: 100px;
+}
+
+@media screen and (min-width: 769px) {
+  .postcard {
+    flex-wrap: inherit;
+  }
+  .postcard .postcard__title {
+    font-size: 2rem;
+  }
+  .postcard .postcard__tagbox {
+    justify-content: start;
+  }
+  .postcard .postcard__img {
+    max-width: 300px;
+    max-height: 100%;
+    transition: transform 0.3s ease;
+  }
+  .postcard .postcard__text {
+    padding: 3rem;
+    width: 100%;
+  }
+  .postcard .media.postcard__text:before {
+    content: "";
+    position: absolute;
+    display: block;
+    background: #18151f;
+    top: -20%;
+    height: 130%;
+    width: 55px;
+  }
+  .postcard:hover .postcard__img {
+    transform: scale(1.1);
+  }
+  .postcard:nth-child(2n+1) {
+    flex-direction: row;
+  }
+  .postcard:nth-child(2n+0) {
+    flex-direction: row-reverse;
+  }
+  .postcard:nth-child(2n+1) .postcard__text::before {
+    left: -12px !important;
+    transform: rotate(4deg);
+  }
+  .postcard:nth-child(2n+0) .postcard__text::before {
+    right: -12px !important;
+    transform: rotate(-4deg);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .postcard__text {
+    padding: 2rem 3.5rem;
+  }
+
+  /* .postcard__text:before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: -20%;
+    height: 130%;
+    width: 55px;
+  } */
+
+  .postcard.light .postcard__text:before {
+    background: #e1e5ea;
+  }
+}
+
+.postcard .postcard__tagbox .yellow.play:hover {
+  background: #bdbb49;
+  color: black;
+}
+
+.yellow .postcard__title:hover {
+  color: #bdbb49;
+}
+
+.yellow .postcard__bar {
+  background-color: #7e4e6e;
+}
+
+.yellow::before {
+  background-image: linear-gradient(-30deg, rgba(189, 187, 73, 0.1), transparent 50%);
+}
+
+.yellow:nth-child(2n)::before {
+  background-image: linear-gradient(30deg, rgba(189, 187, 73, 0.1), transparent 50%);
+}
+
+@media screen and (min-width: 769px) {
+  .yellow::before {
+    background-image: linear-gradient(-80deg, rgba(189, 187, 73, 0.1), transparent 50%);
+  }
+
+  .yellow:nth-child(2n)::before {
+    background-image: linear-gradient(80deg, rgba(189, 187, 73, 0.1), transparent 50%);
+  }
+}
+
+/* -------------------- */
+/* Estilos de contactos */
+/* -------------------- */
+#docs h4 {
+  color: #7e4e6e;
+}
+#docs .postcard__subtitle {
+  color: #18151f;
+}
+
+#docs .postcard__preview-txt {
+  color: #18151f;
+}
+
+#contactos h3.telegram {
+  color: #51BAE9;
+}
+
+#contactos .postcard__bar.telegram {
+  background-color: #51BAE9;
+}
+
+#contactos a.btn.telegram {
+  background-color: #51BAE9;
+}
+
+#contactos a.btn.telegram:hover {
+  background-color: #1babee;
+  color: #FFF;
+}
+
+#contactos h3.whatsapp {
+  color: #1CBEA6;
+}
+
+#contactos .postcard__bar.whatsapp {
+  background-color: #1CBEA6;
+}
+
+#contactos a.btn.whatsapp {
+  background-color: #1CBEA6;
+}
+
+#contactos a.btn.whatsapp:hover {
+  background-color: #1CBEA6;
+  color: #FFF;
+}
+
+#contactos h3.email {
+  color: #3889CA;
+}
+
+#contactos .postcard__bar.email {
+  background-color: #3889CA;
+}
+
+#contactos a.btn.email {
+  background-color: #3889CA;
+}
+
+#contactos a.btn.email:hover {
+  background-color: #3889CA;
+  color: #FFF;
+}
+
+#contactos .postcard__subtitle {
+  color: #18151f;
+}
+
+#contactos .postcard__preview-txt {
+  color: #18151f;
+}
+
+.blue-reverse {
+  flex-direction: row-reverse !important;
+}
+
+@media screen and (max-width: 1024px) {
+  footer h4 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+  } 
 }
